# cloudrun-terraform-tftest-demo

./: .gitignore  README.md  makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
hello_world_api/tests/: cloud_run_client.py  conftest.py  test_hello.py
terraform/: .terraform.lock.hcl  Dockerfile  main.tf  outputs.tf  variables.tf
terraform/scripts/: build_push_docker_img.sh
terraform/tests/: test_cloud_run.py
